fixed base path and test cases
